# binary-hacking-challenge

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  main.cpp
challenge/: Dockerfile  README.md  cpue.py  flag  socat.sh
cpue/: .clang-format  CMakeLists.txt  README.md  ideas.md  main.cpp
cpue/.cache/clangd/index/: AArch64Module.h.820E95CEB5DF1013.idx  ARMModule.h.B7C842E025C2F4CC.idx  AlphaModule.h.C4EA06746ECD42EC.idx  BPFModule.h.704E210F4535D372.idx  EVMModule.h.479192E4F4DCDD8F.idx  HPPAModule.h.C06ECDE52DFEB520.idx  LoongArchModule.h.1D8246D915CA15B6.idx  M680XModule.h.702B05E853BC5D0E.idx  M68KModule.h.5AA52E22D4339409.idx  MCAsmInfo.h.2E3C32BF93A33FE9.idx  MCInst.c.31DEA2CF06A51BBD.idx  MCInst.h.C0F5ABFCC70560C2.idx  MCInstPrinter.c.5D958C9CD3AD71EB.idx  MCInstPrinter.h.B8ACA89F20DE27AF.idx  MCInstrDesc.c.A2F3ADC2529CD6DE.idx  MCInstrDesc.h.6214FF2EF1DF833D.idx  MCRegisterInfo.c.E7A4B93DBC1DEA25.idx  MCRegisterInfo.h.E8158151F08EA3C4.idx  MOS65XXModule.h.07F493FCC6B32A48.idx  Mapping.c.E4DC756A5D3E97AE.idx  Mapping.h.B1ED2F143849F3BE.idx  MipsModule.h.E5A2D709F8A1D07D.idx  PPCModule.h.64AC47BBFCE61EAC.idx  RISCVModule.h.A1850931E8F9005C.idx  SHModule.h.CB5F372933C4C14C.idx  SStream.c.80247D867DEFBB4F.idx  SStream.h.1D2322B0746804CC.idx  SparcModule.h.3DD3E465CA493A4D.idx  SystemZModule.h.7740B1A81F0564AE.idx  TMS320C64xModule.h.61B370CB1847DDB9.idx  TriCoreModule.h.2D9C30950F96293D.idx  WASMModule.h.63E2ED4693243DCF.idx  X86ATTInstPrinter.c.9FBA4D5106F95FC1.idx  X86BaseInfo.h.D278C88F0E04919E.idx  X86Disassembler.c.981E1329670C7880.idx  X86Disassembler.h.27EBA2DEF2A797D4.idx  X86DisassemblerDecoder.c.15831FAF5AEBECA7.idx  X86DisassemblerDecoder.h.C362A6FFDD98246A.idx  X86DisassemblerDecoderCommon.h.1CFD89871B1359AE.idx  X86GenAsmWriter.inc.15B2CFF866508DC6.idx  (+384 more)
cpue/docs/: memory_map.txt
cpue/golden_files/: Makefile  compile.md  demo.asm  simple_add  simple_add.asm
cpue/golden_files/asm/: call_asm.asm  cmpxchg.asm  cqo.asm  demo.asm  div.asm  idiv.asm  imul.asm  loop_insn.asm  movq.asm  movsX.asm  movsx.asm  movzx.asm  mul.asm  nested_interrupt.asm  shl.asm  shr.asm  sub.asm
cpue/golden_files/c/: fibonacci.c  loop.c  simple.c
cpue/include/: address.h  checked_arithmetic.h  common.h  cpu.h  descriptors.h  disassembler.h  elf.h  emulator.h  endianness.h  fifo.h  file.h  forward.h  icu.h  integral_types.h  interrupts.h  kernel.h  loader.h  logging.h  mmio.h  mmu.h  paging.h  pic.h  register.h  register_proxy.h  segment_register.h  segmentation.h  sized_value.h  tlb.h  tss.h  uefi.h
cpue/include/controllers/: icu.h  pic.h  uart.h
cpue/include/descriptors/: descriptors.h  gdtldt_descriptors.h  idt_descriptors.h
cpue/include/descriptors/concrete/: gate_descriptors.h  segment_descriptors.h
cpue/include/devices/: vt100.h
cpue/src/: cpu.cpp  disassembler.cpp  elf.cpp  emulator.cpp  instruction_handlers.cpp  kernel.cpp  loader.cpp  logging.cpp  main.cpp  mmio.cpp  mmu.cpp  register_proxy.cpp  tlb.cpp  uefi.cpp
cpue/src/controllers/: icu.cpp  pic.cpp  uart.cpp
cpue/tests/: checked_arithmetic_test.cpp  common_test.cpp
cpue/tests/include/: utils.h
cpue/tests/mmu/: mmu_test.cpp
cpue/tests/src/: checked_arithmetic_test.cpp  common_test.cpp  fifo_test.cpp  mmio_test.cpp  register_proxy_test.cpp  register_test.cpp  sized_value_test.cpp
cpue/tests/src/instructions/: ADD_test.cpp  MOV_test.cpp
cpue/tests/src/mmu/: mmu_testcases.md
cpue/tutorial/: compile.md  concepts.md  exploit_stack1.c  exploit_stack2.py  stack1.c  stack2.c
exploit/: CMakeLists.txt  Makefile  README.md  exploit.c  exploit.py  notes.md
include/: common.h  emulator.h  mmu.h  tlb.h
minik/: CMakeLists.txt  README.md  minik-img.c
minik/asm/: ihandler.S
minik/demos/: io_responsive_test.c  sl.c  syscalls.c
minik/include/minik/: atomic.h  fifo.h  interrupts.h  io.h  kmalloc.h  math.h  minik.h  paging.h  stl.h  syscalls.h
minik/ports/cowsay/: build.sh
minik/ports/lighthouse-of-doom/: build.sh  patch.patch
minik/ports/tinybasic/: build.sh  patch.patch
minik/src/: fifo.c  interrupts.c  io.c  kmalloc.c  math.c  paging.c  stl.c
minik/src/syscalls/: sys_ioctl.c  sys_read.c  sys_readv.c  sys_write.c  sys_writev.c  syscalls.c
minik/toolchain/: build.sh  x86_64_syscall_arch.h.patch
src/: main.cpp
tutorial/: concepts.md  exploit_stack1.c  stack1.c  stack2.c
